# CellAgent

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
cellagent/: __init__.py  cli.py  config.py  llm.py
cellagent/agent/: __init__.py  cell_agent.py  executor.py  provenance.py
cellagent/knowledge/: __init__.py  cell_markers.md  loader.py  multiomics_integration.md  qc_best_practices.md  study_design_guardrails.md  troubleshooting.md  workflow_guide.md
cellagent/retriever/: __init__.py  resource_retriever.py
cellagent/tools/: __init__.py  annotation.py  clustering.py  differential.py  gene_analysis.py  integration.py  preprocessing.py  tool_registry.py  trajectory.py  visualization.py
examples/: direct_tools.py  quickstart.py  test_report.md
examples/demo_output/: deg_results.csv
tests/: test_components.py
